add Joseph as Admin, tweak parameters

--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -17,7 +17,8 @@ ObjectiveCaptureTime=30
 ObjectiveResetTime=-1
 ObjectiveSpeedup=0.25
 ObjectiveMaxSpeedupPlayers=4
-ObjectiveRadioSpeedup=0.6
+ObjectiveRadioSpeedup=0.
+
 FloatingObjectiveVisibility=ShowActiveOnly
 bLoseSpawnProtectionOnMove=True
 LoseSpawnProtectionOnMoveGrace=5.0
@@ -28,8 +29,8 @@ WarmupEnterTime=0.0
 [/Script/Insurgency.INSMultiplayerMode]
 GameStartingIntermissionTime=5
 PreRoundTime=2
-PostRoundTime=5
-PostGameTime=10
+PostRoundTime=15
+PostGameTime=15
 bAllowFriendlyFire=True
 FriendlyFireModifier=0.2
 FriendlyFireReflect=0
@@ -78,13 +79,11 @@ AIDifficulty=0.40
 RoundTime=1080
 DefendTimer=90
 DefendTimerFinal=120
-RetreatTimer=10
+RetreatTimer=15
 RespawnDPR=1.0
 RespawnDelay=1
-CounterAttackRespawnDelay=0
-
+CounterAttackRespawnDelay=15
 FinalCacheBotQuotaMultiplier=4.0
-
 bUseRandomCounterAttackTypes=True
 
 [/Script/Insurgency.INSCheckpointHardcoreGameMode]
@@ -94,5 +93,4 @@ MaxObjectiveForCrate=3
 MinAmmoPerObjective=4
 MaxAmmoPerObjective=6
 AmmoBoxSpawnChance=1.0
-
 
