--- a/Insurgency/Saved/Config/LinuxServer/Game.ini
+++ b/Insurgency/Saved/Config/LinuxServer/Game.ini
@@ -1,46 +1,45 @@
 [/Script/Insurgency.INSGameMode]
 ServerHostname=The Orbtagon
-bKillFeed=False
-bKillFeedSpectator=True
-bKillerInfo=True
-bKillerInfoRevealDistance=True
-bEnforceFriendlyFireReflect=False
+bKillFeed=false
+bKillFeedSpectator=true
+bKillerInfo=true
+bKillerInfoRevealDistance=true
+bEnforceFriendlyFireReflect=false
 MinimumTotalFriendlyFireDamageToReflect=20
 TeamKillLimit=3
 TeamKillGrace=0.2
 TeamKillReduceTime=90
-bDeadSay=True
-bDeadSayTeam=True
-bVoiceAllowDeadChat=True
-bVoiceEnemyHearsLocal=True
+bDeadSay=true
+bDeadSayTeam=true
+bVoiceAllowDeadChat=true
+bVoiceEnemyHearsLocal=true
 ObjectiveCaptureTime=30
 ObjectiveResetTime=-1
 ObjectiveSpeedup=0.25
 ObjectiveMaxSpeedupPlayers=4
-ObjectiveRadioSpeedup=0.
-
+ObjectiveRadioSpeedup=0
 FloatingObjectiveVisibility=ShowActiveOnly
-bLoseSpawnProtectionOnMove=True
-LoseSpawnProtectionOnMoveGrace=5.0
-bDisableVehicles=False
+bLoseSpawnProtectionOnMove=true
+LoseSpawnProtectionOnMoveGrace=5
+bDisableVehicles=false
 DroppedWeaponLifespan=180
-WarmupEnterTime=0.0
+WarmupEnterTime=0
 
 [/Script/Insurgency.INSMultiplayerMode]
 GameStartingIntermissionTime=5
 PreRoundTime=2
 PostRoundTime=15
 PostGameTime=15
-bAllowFriendlyFire=True
+bAllowFriendlyFire=true
 FriendlyFireModifier=0.2
 FriendlyFireReflect=0
-bMapVoting=True
+bMapVoting=true
 IdleLimit=600
 IdleLimitLowReinforcements=90
 IdleLimitLastOneStandingCombatZone=60
 IdleLimitLastOneStandingSpawnZone=10
 IdleCheckFrequency=30
-bCheckLastPersonStanding=True
+bCheckLastPersonStanding=true
 LeaverPenaltyPlayerLeaveTime=840
 LeaverPenaltyGameStartTimeLimit=60
 LeaverPenaltyPlayerLeftTimeLimit=120
@@ -49,42 +48,47 @@ RoundLimit=3
 WinLimit=1
 InitialSupply=24
 MaximumSupply=50
-bSupplyGainEnabled=True
-bAwardSupplyInstantly=True
+bSupplyGainEnabled=true
+bAwardSupplyInstantly=true
 SupplyGainFrequency=250
-bAllowThirdPersonSpectate=True
-bAllowDeathCamera=True
+bAllowThirdPersonSpectate=true
+bAllowDeathCamera=true
 GameTimeLimit=-1
-bOvertime=False
+bOvertime=false
 OvertimeTime=60
 TeamSwitchTime=10
 ScoreboardConfig=(bDisplayRoundsWon=True,bDisplayTeamScore=True,bDisplayTeamPoints=True,PointsText="",bDisplayPlayerScore=True,bDisplayPlayerKAD=True,bDisplayPlayerObjectives=True,bAlwaysShowExtendedInfo=True,bDisplayObjectiveBriefing=True)
-bIgnoreBotPurge=False
-bIgnoreRoundOver=False
-bUsePlayerStartScoring=False
+bIgnoreBotPurge=false
+bIgnoreRoundOver=false
+bUsePlayerStartScoring=false
 MaxPlayerStartsToScore=20
 PostGameTimeExp=15
 PostGameTimeMatch=2
 ScoringAmounts=(("Kill", 10),("OffensiveKill", 5),("DefensiveKill", 5),("Assist", 5),("DriverAssist", 5),("FireSupportKill", 5),("ObjectiveCapture", 50),("ObjectiveDestroy", 100),("ObjectiveReset", 20),("ObjectiveCaptureTick", 10),("ObjectiveResetTick", 10))
-bFireSupportAllowed=True
+bFireSupportAllowed=true
+SwitchTeamsEveryRound=0
+bAllowPlayerTeamSelect=true
+bBots=false
+BotQuota=0
+OverTime=60
 
 [/Script/Insurgency.INSCoopMode]
 MinimumEnemies=6
 MaximumEnemies=20
-bLoseWhenAllPlayersDead=True
+bLoseWhenAllPlayersDead=true
 MaxPlayersToScaleEnemyCount=8
-AIDifficulty=0.40
+AIDifficulty=0.4
 
 [/Script/Insurgency.INSCheckpointGameMode]
 RoundTime=1080
 DefendTimer=90
 DefendTimerFinal=120
 RetreatTimer=15
-RespawnDPR=1.0
+RespawnDPR=1
 RespawnDelay=1
 CounterAttackRespawnDelay=15
-FinalCacheBotQuotaMultiplier=4.0
-bUseRandomCounterAttackTypes=True
+FinalCacheBotQuotaMultiplier=4
+bUseRandomCounterAttackTypes=true
 
 [/Script/Insurgency.INSCheckpointHardcoreGameMode]
 PlayersWhoHaveSpawnedWithLoadout=true
@@ -92,5 +96,67 @@ MinObjectiveForCrate=1
 MaxObjectiveForCrate=3
 MinAmmoPerObjective=4
 MaxAmmoPerObjective=6
-AmmoBoxSpawnChance=1.0
+AmmoBoxSpawnChance=1
+
+[/ImprovedAI/Mutators/ImprovedAI.ImprovedAI_C]
+bEnableBotSkillCfg=true
+HearAwareDistanceRadial=3000
+HearAwareDistanceGunshot=5000
+HearAwareDistanceSprintFootstep=2000
+HearDistanceFootstepsSprinting=3500
+HearDistanceFootstepsRunning=2000
+SightRangeAlert=20000
+SightRangeIdle=5000
+SightRangeWithinSmokeGrenade=1500
+SightRangeWithinSmokeGrenadeEye=250
+SightRangeSmokeEyeFrac=0.8
+TurnSpeedMaxAngleThreshold=90
+TurnSpeedMinAngleThreshold=5
+TurnSpeedMaxAngle=30
+TurnSpeedMinAngle=60
+AttackDelayClose=0.2
+AttackDelayDistant=0.8
+DistanceRange=15000
+CloseRange=500
+ChanceSprintMultiplier=2
+ChangeMovingMultiplier=1.25
+AccuracyMultiplier=1.25
+SuppressionAccuracyMultiplier=0.1
+WeaponCategoryConfigs=((Launcher, (MinAttackDegrees=1.000000, MaxAttackDegrees=2.000000, ProjectileSpreadZeroTimeFar=0.000000, ProjectileSpreadZeroTimeClose=0.000000, BloatBoxMax=(X=200.000000,Y=100.000000))), (MarksmanRifle, (MinAttackDegreesClose=10.000000, ProjectileSpreadZeroTimeFar=8.000000, BloatBoxMin=(X=50.000000,Y=50.000000), BloatBoxMax=(X=150.000000,Y=100.000000))), (BoltRifle, (MinAttackDegreesClose=10.000000, MaxAttackDegrees=0.500000, BloatBoxMin=(X=25.000000,Y=25.000000), BloatBoxMax=(X=150.000000,Y=80.000000))), (Shotgun, (MinAttackDegrees=1.000000, MaxAttackDegrees=2.000000, ProjectileSpreadZeroTimeFar=5.000000, ProjectileSpreadZeroTimeClose=2.500000, BloatBoxMin=(X=75.000000,Y=75.000000), BloatBoxMax=(X=150.000000,Y=150.000000))), (LightMachineGun, (MinAttackDegrees=2.000000, MaxAttackDegrees=3.000000, ProjectileSpreadZeroTimeFar=8.000000, BloatBoxMin=(X=75.000000,Y=75.000000), BloatBoxMax=(X=150.000000,Y=150.000000))), (HeavyMachineGun, (MinAttackDegrees=2.000000, MaxAttackDegrees=3.000000, BloatBoxMin=(X=75.000000,Y=75.000000), BloatBoxMax=(X=200.000000,Y=150.000000))), (SubmachineGun, (MinAttackDegrees=1.000000, MaxAttackDegrees=2.000000, ProjectileSpreadZeroTimeFar=5.000000, ProjectileSpreadZeroTimeClose=1.500000, BloatBoxMin=(X=25.000000,Y=25.000000), BloatBoxMax=(X=100.000000,Y=75.000000))))
+DefaultCategoryConfig=(MaxDistance=30000.000000, MinAttackDegrees=1.000000, MinAttackDegreesClose=20.000000, MaxAttackDegrees=2.000000, ProjectileSpreadZeroTimeFar=4.000000, ProjectileSpreadZeroTimeClose=1.500000, BloatBoxMin=(X=25.000000,Y=25.000000), BloatBoxMax=(X=175.000000,Y=100.000000))
+ChanceAtDistanceStanding=5
+ChanceAtCloseRangeStanding=100
+ChanceAtDistanceCrounched=2
+ChanceAtCloseRangeCrouched=50
+ChanceAtDistanceProne=0
+ChangeAtCloseRangeProne=20
+FragGrenadeMinDetonateTime=1.5
+bOnlyGrenadeUnreachable=false
+GrenadeInaccuracyMaxDistance=1500
+SquadGrenadeCooldown=45
+GrenadeInaccuracyMax=(X=225.0,Y=175.0)
+ZeroTimeMultiplierEasy=1.25
+ZeroTimeMultiplierHard=0.5
+BloatBoxMultiplierEasy=1.25
+BloatBoxMultiplierHard=0.5
+BloatBoxMultiplierDistance=2
+BloatBoxMultiplierMaxDistance=10000
+BloatBoxMultiplierMinDistance=2000
+bBotIgnoresDamage=false
+bBotHasInfiniteAmmo=false
+bBotUsesVehicles=true
+CoverSuppressionToCowerCombat=0.1
+CoverSuppressionToCower=0
+CoverSuppressionToRecover=0
+CoverCowerMinTime=2.5
+AmbushBonusDistance=2000
+AmbushReactionTimeMultiplier=2.2
+AmbushAccuracyMultiplier=1.6
+AmbushTurnSpeedMultiplier=1.8
+MoraleRestoreTime=10
+MoraleLostOnHeadShot=50
+MoraleLostOnDeath=15
+MoraleLostOnGruesomeDeath=35
+MoraleToRetreat=10
+MoraleToRecover=90
 
